<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_id1"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:shortcutShortLabel="@string/shortcut_label1"
        android:shortcutLongLabel="@string/shortcut_long_label1"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.image.deeplinking"
            android:data="androidgeek.co/product1"
            android:targetClass="com.image.deeplinking.MainActivity">
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_id2"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:shortcutShortLabel="@string/shortcut_label2"
        android:shortcutLongLabel="@string/shortcut_long_label2"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.image.deeplinking"
            android:data="androidgeek.co/product2"
            android:targetClass="com.image.deeplinking.MainActivity">
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_id"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:shortcutShortLabel="@string/shortcut_label"
        android:shortcutLongLabel="@string/shortcut_long_label"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.image.deeplinking"
            android:data="androidgeek.co/product"
            android:targetClass="com.image.deeplinking.MainActivity">
        </intent>
    </shortcut>
</shortcuts>
